--- a/selecao/exercicio-05.html
+++ b/selecao/exercicio-05.html
@@ -5,7 +5,7 @@
 
     //processamento
     let resposta = ""
-    if(valor > 0) {
+    if(valor >= 0) {
         resposta = "positivo"
     } else { 
         resposta = "negativo"
@@ -13,7 +13,7 @@
 
     //saida
     document.write("o valor é" + resposta)
-    
+
 
 
 
