--- a/selecao/exerc-10-function.html
+++ b/selecao/exerc-10-function.html
@@ -10,7 +10,7 @@
     //processamento 
 
 
-    function ordemcrescente(valo1,valor2,valor3) {
+    function ordemcrescente(valor1,valor2,valor3) {
         let tempvalor
     
     
